main | Resham |  Fixed message cropping in UI

--- a/packages/client/src/styles/index.css
+++ b/packages/client/src/styles/index.css
@@ -137,10 +137,10 @@ body {
 .validation-warnings {
   font-size: 12px;
   color: var(--warning);
-  max-width: 500px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  max-width: 700px;
+  white-space: normal;
+  line-height: 1.4;
+  text-align: center;
 }
 
 .editor-body {
